Clear 'm_size' of DrawingBuffer in the 'clear' function https://bugs.webkit.org/show_bug.cgi?id=76239

Patch by Yongsheng Zhu <yongsheng.zhu@intel.com> on 2012-01-17
Reviewed by Kenneth Russell.

Clear the resources of DrawingBuffer but don't clear 'm_size'. This makes
's_currentResourceUsePixels' is not calculated correctly.

* platform/graphics/gpu/DrawingBuffer.cpp:
(WebCore::DrawingBuffer::clear):

Canonical link: https://commits.webkit.org/93317@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105233 268f45cc-cd09-0410-ab3c-d52691b4dbfc